--- a/authApp/src/app/login/login.component.html
+++ b/authApp/src/app/login/login.component.html
@@ -21,7 +21,7 @@
         <button class="btn btn-danger w-100 mb-3">
           <i class="fab fa-google"></i> Login with Google
         </button>
-        <p class="text-center">Don’t have an account? <a href="#" routerLink="/signup">Signup</a></p>
+        <p class="text-center">Don’t have an account? <a href="http://localhost:4200/signup" routerLink="/sign">Signup</a></p>
       </form>
     </div>
   </div>
