--- a/authApp/src/app/signup/signup.component.html
+++ b/authApp/src/app/signup/signup.component.html
@@ -22,7 +22,7 @@
         <button class="btn btn-danger w-100 mb-3">
           <i class="fab fa-google"></i> Signup with Google
         </button>
-        <p class="text-center">Already have an account? <a routerLink="/login">Login</a></p>
+        <p class="text-center">Already have an account? <a href="#" routerLink="/login">Login</a></p>
       </form>
     </div>
   </div>
